syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package grpc;


service Chord {
  rpc GetSuccessor(google.protobuf.Empty) returns (Node) {}
  rpc FindSuccessor(Lookup) returns (Node) {}
  rpc GetPredecessor(Node) returns (Node) {}
  rpc Notify(Node) returns (google.protobuf.BoolValue) {}
  rpc GetSuccessorList(google.protobuf.Empty) returns (Nodes) {}
  rpc GetStablizerData(Node) returns (StablizerData) {}
}

message Lookup {
  bytes Key = 1;
}

message Node {
  string IP = 1;
  int32 Port = 2;
}

message StablizerData {
  Node Predecessor = 1;
  repeated Node SuccessorList = 2;
}

message Nodes {
  repeated Node Nodes = 1;
}